Fix spacing, bold h2, and fix incorrect flex direction for bigger screen sizes

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -74,6 +74,7 @@ h2 {
     margin: 0.75rem 0;
     font-size: 1.5rem;
     text-align: center;
+    font-weight: 500;
 }
 
 p {
@@ -88,17 +89,19 @@ p {
 .menu-item {
     width: 100%;
     flex-direction: column;
-    
+    margin-bottom: 1.5rem;
+ 
     img {
         width: 100%;
         object-fit: cover;
         height: calc(200px + 2rem);
     }
-    
+
     @media screen and (min-width: 600px) {
-        flex-direction: column;
+        flex-direction: row;
         width: 50%;
         padding: 1rem;
+        margin-bottom: 0;
     }
 
     @media screen and (min-width: 992px) {
@@ -111,5 +114,6 @@ p {
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 2rem;
 }
 
